--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-cryptography ==2.4.2
+asn1crypto==0.24.0
+bcrypt==3.1.6
+certifi==2019.3.9
+cffi==1.12.2
+chardet==3.0.4
+colorama==0.4.1
+cryptography==2.4.2
+forked-path==0.2.3
+idna==2.8
+paramiko==2.4.2
+pyasn1==0.4.5
+pycparser==2.19
+PyNaCl==1.3.0
 pysftp==0.2.8
 requests==2.18.4
-forked_path==0.2.3
+six==1.12.0
 tqdm==4.31.1
+urllib3==1.22
